--- a/front/src/style/text.scss
+++ b/front/src/style/text.scss
@@ -63,7 +63,7 @@
 }
 
 .text-gray {
-  color: #999;
+  color: #c4c6cc;
 }
 
 .text-desc {
@@ -88,8 +88,4 @@
 
 .text-success {
   color: $success-color;
-}
-
-.text-primary {
-  color: $primary-color;
 }
