feat: 单据管理-资源预测-单据详情 --story=126659747 (merge request !2484)
--story=126659747
--story=126641014

--- a/front/src/views/resource/resource-manage/hooks/use-scr-columns.module.scss
+++ b/front/src/views/resource/resource-manage/hooks/use-scr-columns.module.scss
@@ -4,7 +4,7 @@
 }
 
 .url-sync-partial-success-status {
-  border-bottom: 1px dashed rgb(151, 155, 165);
+  border-bottom: 1px dashed rgb(151 155 165);
 }
 
 .status-column-cell {
@@ -18,7 +18,7 @@
   }
 
   .partial-success-status-text {
-    border-bottom: 1px dashed rgb(151, 155, 165);
+    border-bottom: 1px dashed rgb(151 155 165);
   }
 }
 
@@ -42,7 +42,7 @@
   }
 
   .un-health {
-    background-color: #ffeeee;
+    background-color: #fee;
     color: #ea3536;
   }
 
@@ -50,6 +50,7 @@
     background-color: #e4faf0;
     color: #14a568;
   }
+
   .special-health {
     background-color: #e4faf0;
     color: #63656e;
@@ -60,38 +61,49 @@
 .c-info {
   color: #909399 !important;
 }
+
 .c-success {
   color: #67c23a !important;
 }
+
 .c-danger {
   color: #f56c6c !important;
 }
+
 .c-warning {
   color: #e6a23c !important;
 }
+
 .c-disabled {
   color: #c8c9cc;
 }
+
 .fail-flex {
   display: flex;
   align-items: center;
   line-height: 1;
+
   & > span {
     margin-right: 5px;
   }
+
   a {
     font-size: 0;
+
     & > span {
       font-size: 12px;
     }
   }
 }
+
 .cvm-cell-height {
   line-height: 1.6;
+
   & > div:last-child {
     color: #909399;
   }
 }
+
 .link-type,
 .link-type:focus {
   color: #409eff;
@@ -100,6 +112,7 @@
 
 .success-container {
   display: flex;
+
   div + div {
     margin-left: 5px;
   }
@@ -120,40 +133,34 @@
   .copy-icon {
     display: none;
   }
+
   &:hover {
     .copy-icon {
       display: inline-flex;
     }
   }
 }
-.resource-plan-detail-cell {
-  display:flex;
-  cursor: pointer;
-  align-items: center;
-}
-.resource-plan-detail-text {
-  color: #e9a24c;
-}
-.resource-plan-detail-info {
-  font-size: 18px;
-  margin-right:4px;
-}
+
 .resource-plan-status-icon {
   margin-right: 4px;
 }
+
 .resource-plan-status-icon-yellow {
-  color:#ff9c01
-}
-.resource-plan-status-icon-blue {
-  color:#3a84ff
-}
-.resource-plan-status-icon-red {
-  color:#ea3636
-}
-.resource-plan-status-icon-green {
-  color:#2dcb56
-}
-.resource-plan-status-icon-gray {
-  color:#c4c6cc
+  color: #ff9c01;
 }
 
+.resource-plan-status-icon-blue {
+  color: #3a84ff;
+}
+
+.resource-plan-status-icon-red {
+  color: #ea3636;
+}
+
+.resource-plan-status-icon-green {
+  color: #2dcb56;
+}
+
+.resource-plan-status-icon-gray {
+  color: #c4c6cc;
+}
