feat: 单据管理模块改造-路由与目录结构优化/tab样式与内外差异优化 (#1708)
* feat: 单据管理模块改造-路由与目录结构优化 --story=126641014
# Reviewed, transaction id: 54681

* feat: 由于单据重构删除重复文件
# Reviewed, transaction id: 54697

* fix: 修复老路由单据详情无法跳转
# Reviewed, transaction id: 55099

* fix: 移除不需要的枚举
# Reviewed, transaction id: 55235

* feat: 单据相关路由name改动
# Reviewed, transaction id: 56616

* feat: 修改部分路由常量名称 删除无用路由和文件
# Reviewed, transaction id: 56861

* feat: 修改部分常量命名

* fix: 遗漏常量修改修复

* fix: 路由跳转时匹配页面错误问题
# Reviewed, transaction id: 57492

* fix: 回退负载均衡部分代码
# Reviewed, transaction id: 57504

--- a/front/src/views/ticket/children/apply-detail/account-apply-detail/index.scss
+++ b/front/src/views/ticket/children/apply-detail/account-apply-detail/index.scss
@@ -3,13 +3,14 @@
     padding: 20px 30px;
     border-radius: 2px;
     background: #fff;
-    box-shadow: 0px 1px 2px 0px rgba(49, 50, 56, .1);
+    box-shadow: 0 1px 2px 0 rgb(49 50 56 / 10%);
 
     .approval-process-wrapper {
       margin-left: auto;
       font-size: 14px;
       color: #3a84ff;
       cursor: pointer;
+
       &:hover {
         color: #699df4;
       }
@@ -45,21 +46,19 @@
     }
   }
 
-
   .create-account-btn {
     font-size: 12px;
   }
 
-
   .status {
     padding: 1px 8px;
-    color: #ffffff;
+    color: #fff;
     border-radius: 10px;
     font-size: 12px;
-    background: #367FF9;
+    background: #367ff9;
 
     &.pending {
-      background: #367FF9;
+      background: #367ff9;
     }
 
     &.rejected {
@@ -67,11 +66,11 @@
     }
 
     &.completed {
-      background: #27BE78;
+      background: #27be78;
     }
 
     &.cancelled {
-      background: #AAAAAA;
+      background: #aaa;
     }
 
     &.deliver_error {
@@ -79,10 +78,9 @@
     }
 
     &.delivering {
-      background: #367FF9;
+      background: #367ff9;
     }
   }
-
 
   .error-text {
     color: #ea3636;
