--- a/front/src/views/ticket/children/apply-detail/index.scss
+++ b/front/src/views/ticket/children/apply-detail/index.scss
@@ -1,5 +1,4 @@
 .apply-detail-container {
-
   .title {
     font-size: 16px;
     color: #313238;
@@ -7,11 +6,10 @@
 
   .sub-title {
     font-size: 14px;
-    color: #63656E;
+    color: #63656e;
   }
 
-
   .apply-content-wrapper {
-    margin: 76px 24px 0 24px;
+    margin: 76px 24px 0;
   }
 }
