feat: CLB查询与变更 (#1764)
* feat: 设备检索-检索条件
--story=126641010

* feat: 设备检索-监听器页面
--story=126641405

* chore: 设备检索-URL规则页面
--story=126659199

* feat: 设备检索-RS页面
--story=126659224

* feat: 设备检索-RS-批量调整RS权重/解绑RS
--story=126660146

* feat: 负载均衡批量导出优化
--story=126660219

* feat: 设备检索-监听器列表批量复制

* feat: 资源列表页面改造
--story=126636878

* feat: 设备检索表格列配置

* feat: 资源列表页面改造
--story=126636878

* feat: 适配任务管理页面
--story=126830288

* feat: 适配删除/调整权重接口
--story=126830288

* perf: UI优化

* 代码优化

* 代码优化

--- a/front/src/style/index.scss
+++ b/front/src/style/index.scss
@@ -28,3 +28,19 @@
       transform: rotate(360deg);
   }
 }
+
+// 悬浮样式
+.g-expand {
+  position: absolute !important;
+  width: 100%;
+  z-index: 2;
+
+  .bk-tag-input-trigger, .bk-tag-input {
+    height: 32px !important;
+    width: 100%;
+    &.is-focus, &.active {
+        height: auto !important;
+        z-index: 9999;
+    }
+  }
+}
