--- a/front/src/components/resource-plan/applications/detail/approval/index.module.scss
+++ b/front/src/components/resource-plan/applications/detail/approval/index.module.scss
@@ -1,8 +1,5 @@
 .home {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 52px;
+  // height: 52px;
 
   .status {
     display: flex;
@@ -34,12 +31,14 @@
 }
 
 .error-message {
-  max-width: 1475px;
+  // max-width: 1475px;
+  max-width: 90%;
   margin-left: 13.5px;
   justify-content: center;
   display: flex;
   align-items: center;
   color: #d9001b;
+
   .error-message-color {
     color: #d9001b !important;
   }
