feat: 机房裁撤-模块展示与选择优化 (merge request !2582)
--story=127918813
 



TAPD: --story=127918813

--- a/front/src/views/ziyanScr/recycle-server-room/search/index.module.scss
+++ b/front/src/views/ziyanScr/recycle-server-room/search/index.module.scss
@@ -1,16 +1,48 @@
-.gap {
-  margin-bottom: 15px;
+.all-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .title {
+  color: #3a84ff !important;
   display: flex;
   align-items: center;
 
-  .chooseAll {
+  .choose-all {
     margin-left: 16px;
   }
 }
 
 .choose {
   margin: 16px 24px 0 0 !important;
+}
+
+.choose-count {
+  margin-left: 16px;
+  color: #63656e;
+  font-size: 12px;
+
+  .num {
+    font-weight: 700;
+    font-style: normal;
+  }
+}
+
+.collapse-panel {
+  color: #63656e;
+  background: #fff;
+  box-shadow: 0 2px 4px 0 #1919290d !important;
+  border-radius: 2px;
+  margin-bottom: 10px !important;
+
+  :global(.bk-collapse-title) {
+    display: flex;
+    align-items: center;
+  }
+
+  :global(.bk-collapse-content) {
+    padding: 0 24px 16px !important;
+  }
 }
