feat: 【短租类型】主机申领-支持“短租项目” --story=127698656 (merge request !2597)
Squash merge branch 'feat-short-rental' into 'bcc/feature-plan-short-rental'
feat: 【短租类型】主机申领-支持“短租项目” --story=127698656

 



TAPD: --story=127698656
TAPD: --story=126784401
TAPD: --story=127700168
TAPD: --story=127699679
TAPD: --story=127698410

--- a/front/src/assets/iconfont/style.css
+++ b/front/src/assets/iconfont/style.css
@@ -368,3 +368,6 @@ url("fonts/iconcool.eot?#iefix") format("embedded-opentype");
 .bkhcm-icon-other:before {
 	content: "\e17a";
 }
+.bkhcm-icon-short-rental:before {
+	content: "\e17d";
+}
